<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_for_you"
        android:icon="@drawable/ic_for_you"
        android:title="@string/title_for_you" />

    <item
        android:id="@+id/nav_near_me"
        android:icon="@drawable/ic_near_me"
        android:title="@string/title_near_me" />

    <item
        android:id="@+id/nav_favourite"
        android:icon="@drawable/ic_favourite"
        android:title="@string/title_favourite" />

    <item
        android:id="@+id/nav_discover"
        android:icon="@drawable/ic_discover"
        android:title="@string/title_discover" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more" />

</menu>
